--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -1,19 +1,109 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<link
+		rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+	</head>
+	<body>
+
+		<style>
+			.search {
+				position: fixed;
+				top: 50px;
+				left: 20px;
+				background: #fff;
+			}
+			.login {
+				position: fixed;
+				top: 50px;
+				right: 50px;
+				background: #fff;
+			}
+			.admin {
+				position: fixed;
+				top: 50px;
+				right: 250px;
+				background: #fff;
+			}
+			.sign-up,
+			.compte {
+				position: fixed;
+				top: 50px;
+				right: 130px;
+				background: #fff;
+			}
+		</style>
+
+		<div class="text-center my-5">
+			<a href="{{path('main')}}">
+				<img src="{{ asset('img/logo.jpg') }}" alt="" width="100">
+			</a>
+		</div>
+
+        <div class="search">
+			<form action="{{ path('search')}}" method="get">
+				<div class="input-group">
+					<input type="text" name="search" placeholder="Recherche" class="form-control search-input">
+					<input type="submit" class="btn btn-outline-primary" value="Recherche">
+				</div>
+			</form>
+		</div>
+
+		{% for message in app.flashes('notice') %}
+			<div class="container alert alert-success alert-dismissible fade show" role="alert">
+				{{ message }}
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+		{% endfor %}
+
+		{% if app.user %}
+			{% if app.user.roles[0] == 'ROLE_ADMIN' %}
+				<div class="admin">
+					<a href="{{path('admin_main')}}">
+						<button class="btn btn-dark">Admin</button>
+					</a>
+				</div>
+			{% endif %}
+			<div class="compte">
+				<a href="{{path('update_user')}}">
+					<button class="btn btn-outline-primary">Mon compte</button>
+				</a>
+			</div>
+			<div class="login">
+				<a href="{{path('app_logout')}}">
+					<button class="btn btn-outline-primary">Logout</button>
+				</a>
+			</div>
+		{% else %}
+			<div class="sign-up">
+				<a href="{{path('app_register')}}">
+					<button class="btn btn-outline-primary">Sign up</button>
+				</a>
+			</div>
+			<div class="login">
+				<a href="{{path('app_login')}}">
+					<button class="btn btn-outline-primary">Sign in</button>
+				</a>
+			</div>
+		{% endif %}
+
+		{% block body %}{% endblock %}
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	</body>
 </html>
