--- a/templates/front/main/index.html.twig
+++ b/templates/front/main/index.html.twig
@@ -1,20 +1,31 @@
-<!DOCTYPE html>
+{% extends 'front/base.html.twig' %}
 
-<title>Hello MainController!</title>
+{% block title %}Car
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<style>
+		.example-wrapper {
+			max-width: 800px;
+			font: 18px / 1.5 sans-serif;
+		}
+	</style>
+	<div class="example-wrapper container text-center mt-3">
+		<h1>Bienvenue!</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/Dev/laragon/www/sf_car/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/Dev/laragon/www/sf_car/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
-    </ul>
-</div>
+		<div class="mt-5">
+			<div>
+				<a href="{{ path('car_list') }}" class="btn btn-outline-dark w-50 m-2">Voir les véhicules</a>
+			</div>
+			<div>
+				<a href="{{ path('brand_list') }}" class="btn btn-outline-dark w-50 m-2">Voir les marques</a>
+			</div>
+			<div>
+				<a href="{{ path('group_list') }}" class="btn btn-outline-dark w-50 m-2">Voir les groupes</a>
+			</div>
+			<div>
+				<a href="{{ path('image_list') }}" class="btn btn-outline-dark w-50 m-2">Voir les images</a>
+			</div>
+		</div>
+	</div>
 {% endblock %}
