--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,21 +1,35 @@
-<!DOCTYPE html>
+{% extends 'front/base.html.twig' %}
 
-<title>Register</title>
+{% block title %}Register
+{% endblock %}
 
 {% block body %}
-    {% for flashError in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-    {% endfor %}
+	{% for flashError in app.flashes('verify_email_error') %}
+		<div class="alert alert-danger" role="alert">{{ flashError }}</div>
+	{% endfor %}
 
-    <h1>Register</h1>
+	<div class="container p-3 w-50 m-auto">
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+		<h1>Register</h1>
+		<div class="form mt-5">
+			{{ form_start(registrationForm) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+			<div class="mb-3">
+				{{ form_row(registrationForm.email, {'attr' : { 'class' : 'form-control'} }) }}
+			</div>
+
+			<div class="mb-3">
+				{{ form_row(registrationForm.plainPassword, { label: 'Mot de passe' ,'attr' : { 'class' : 'form-control' }}) }}
+			</div>
+
+			<div class="mb-3">
+				{{ form_row(registrationForm.agreeTerms, { label: 'accepter les conditions'}) }}
+			</div>
+
+			<button type="submit" class="btn btn-outline-dark mt-3">Register</button>
+
+			{{ form_end(registrationForm) }}
+		</div>
+
+	</div>
 {% endblock %}
