--- a/templates/front/car/car.html.twig
+++ b/templates/front/car/car.html.twig
@@ -23,6 +23,24 @@
 			<p>{{ car.description }}</p>
 			<p>{{ car.brand.name }}</p>
 			<p>{{ car.groupe.name }}</p>
+			<p>
+				<a href="{{ path('car_like', { 'id' : car.id }) }}" class="text-decoration-none js-likes">
+					{% if app.user and car.isLikeByUser(app.user) %}
+						<i class="like bi bi-hand-thumbs-up-fill"></i>
+					{% else %}
+						<i class="like bi bi-hand-thumbs-up"></i>
+					{% endif %}
+					<span class="js-likes">{{ car.likes | length }}</span>
+				</a>
+				<a href="{{ path('car_dislike', { 'id' : car.id }) }}" class="text-decoration-none text-danger js-dislikes">
+					{% if app.user and car.isDislikeByUser(app.user) %}
+						<i class="dislike bi bi-hand-thumbs-down-fill text-danger"></i>
+					{% else %}
+						<i class="dislike bi bi-hand-thumbs-down text-danger"></i>
+					{% endif %}
+					<span class="js-dislikes">{{ car.dislikes | length }}</span>
+				</a>
+			</p>
 		</div>
 	</div>
 
