--- a/templates/admin/admin_main/index.html.twig
+++ b/templates/admin/admin_main/index.html.twig
@@ -1,20 +1,45 @@
-<!DOCTYPE html>
+{% extends 'admin/base.html.twig' %}
 
-<title>Hello AdminMainController!</title>
+{% block title %}Admin!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<style>
+		.example-wrapper {
+			max-width: 800px;
+			font: 18px / 1.5 sans-serif;
+		}
+	</style>
+	<div class="example-wrapper container text-center mt-3">
+		<h1>Administration!</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+		{% for message in app.flashes('notice') %}
+			<div class="alert alert-success alert-dismissible fade show" role="alert">
+				{{ message }}
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+		{% endfor %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/Dev/laragon/www/sf_car/src/Controller/AdminMainController.php'|file_link(0) }}">src/Controller/AdminMainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/Dev/laragon/www/sf_car/templates/admin_main/index.html.twig'|file_link(0) }}">templates/admin_main/index.html.twig</a></code></li>
-    </ul>
-</div>
+		<div class="mt-5">
+			<div>
+				<a href="{{ path('admin_car_list') }}" class="btn btn-outline-dark w-50 m-2">Gerer les voitures</a>
+			</div>
+			<div>
+				<a href="{{ path('admin_brand_list') }}" class="btn btn-outline-dark w-50 m-2">Gerer les marques</a>
+			</div>
+			<div>
+				<a href="{{ path('admin_group_list') }}" class="btn btn-outline-dark w-50 m-2">Gerer les groupes</a>
+			</div>
+			<div>
+				<a href="{{ path('admin_image_list') }}" class="btn btn-outline-dark w-50 m-2">Gerer les images</a>
+			</div>
+			<div>
+				<a href="{{ path('admin_user_list') }}" class="btn btn-outline-dark w-50 m-2">Gerer les utilisateurs</a>
+			</div>
+			<div>
+				<a href="{{ path('main') }}" class="btn btn-dark w-50 m-2">Accueil</a>
+			</div>
+
+		</div>
+	</div>
 {% endblock %}
