--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,13 +4,9 @@
 {% endblock %}
 
 {% block body %}
-	{% for flashError in app.flashes('verify_email_error') %}
-		<div class="alert alert-danger" role="alert">{{ flashError }}</div>
-	{% endfor %}
 
 	<div class="container p-3 w-50 m-auto">
 
-		<h1>Register</h1>
 		<div class="form mt-5">
 			{{ form_start(registrationForm) }}
 
@@ -29,6 +25,12 @@
 			<button type="submit" class="btn btn-outline-dark mt-3">Register</button>
 
 			{{ form_end(registrationForm) }}
+
+			{% if app.user %}
+				<form action="{{ path('delete_user') }}">
+					<button type="submit" class="btn btn-outline-danger mt-3">Supprimer</button>
+				</form>
+			{% endif %}
 		</div>
 
 	</div>
