Delete User by admin

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -31,7 +31,7 @@
 
 		<div class="text-center my-5">
 			<a href="{{path('admin_main')}}">
-				<img src="{{ asset('img/logo.jpg') }}" alt="" width="100">
+				<img src="{{ asset('img/logo.png') }}" alt="" width="100">
 			</a>
 		</div>
 
