--- a/templates/admin/admin_user/users.html.twig
+++ b/templates/admin/admin_user/users.html.twig
@@ -32,12 +32,12 @@
 					<tr>
 						<td>{{ user.email }}</td>
 						<td>
-							<a href="{{ path('update_user', { 'id' : user.id }) }}">
+							<a href="{{ path('update_user_by_id', { 'id' : user.id }) }}">
 								<i class="bi bi-pencil-square"></i>
 							</a>
 						</td>
 						<td>
-							<a href="{{ path('delete_user', { 'id' : user.id }) }}">
+							<a href="{{ path('delete_user_by_id', { 'id' : user.id }) }}">
 								<i class="bi bi-trash text-danger"></i>
 							</a>
 						</td>
