--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -51,7 +51,7 @@
 
 		<div class="text-center my-5">
 			<a href="{{path('main')}}">
-				<img src="{{ asset('img/logo.jpg') }}" alt="" width="100">
+				<img src="{{ asset('img/logo.png') }}" alt="" width="100">
 			</a>
 		</div>
 
@@ -65,7 +65,7 @@
 		</div>
 
 		{% for message in app.flashes('notice') %}
-			<div class="container alert alert-success alert-dismissible fade show" role="alert">
+			<div class="container alert alert-success alert-dismissible fade show w-50" role="alert">
 				{{ message }}
 				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 			</div>
@@ -103,6 +103,12 @@
 		{% endif %}
 
 		{% block body %}{% endblock %}
+		<div class="container border p-2 my-3">
+			<h3>Nos marques</h3>
+			{% for brand in gbrands.getAll %}
+				<p>{{ brand.name }}</p>
+			{% endfor %}
+		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script src="{{ asset('/js/like.js') }}"></script>
