--- a/templates/admin/admin_image/images.html.twig
+++ b/templates/admin/admin_image/images.html.twig
@@ -39,7 +39,7 @@
 					<tr>
 						<td>
 							<a href="{{ path('admin_update_image', { 'id' : image.id }) }}">
-								<img src="{{ asset('img/'~image.src) }}" alt="" width="100px">
+								<img src="{{ asset('upload/'~image.src) }}" alt="" width="100px">
 							</a>
 						</td>
 						<td>{{ image.title }}</td>
