--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -21,20 +21,22 @@
 	</head>
 	<body>
 		<style>
-			.search {
+			.accueil {
 				position: fixed;
-				top: 50px;
-				right: 20px;
-				background: #fff;
+				top: 30px;
+				right: 50px;
 			}
 		</style>
 
-		<div class="text-center my-5">
+		<div class="text-center">
 			<a href="{{path('admin_main')}}">
-				<img src="{{ asset('img/logo.png') }}" alt="" width="100">
+				<img src="{{ asset('img/logos.png') }}" alt="" width="150">
 			</a>
 		</div>
 
+		<div class="accueil">
+			<a href="{{ path('main') }}" class="btn btn-dark">Accueil</a>
+		</div>
 
 		{% block body %}{% endblock %}
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
