--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -26,36 +26,36 @@
 				position: fixed;
 				top: 50px;
 				left: 20px;
-				background: #fff;
 			}
-			.login {
+			.log {
 				position: fixed;
 				top: 50px;
 				right: 50px;
-				background: #fff;
 			}
 			.admin {
 				position: fixed;
-				top: 50px;
-				right: 250px;
-				background: #fff;
+				top: 100px;
+				right: 50px;
+				width: 200px;
 			}
 			.sign-up,
 			.compte {
 				position: fixed;
 				top: 50px;
 				right: 130px;
-				background: #fff;
+			}
+			.img {
+				background: #fff
 			}
 		</style>
 
-		<div class="text-center my-5">
+		<div class="text-center ">
 			<a href="{{path('main')}}">
-				<img src="{{ asset('img/logo.png') }}" alt="" width="100">
+				<img src="{{ asset('img/logos.png') }}" alt="" width="150" class="img">
 			</a>
 		</div>
 
-        <div class="search">
+		<div class="search">
 			<form action="{{ path('search')}}" method="get">
 				<div class="input-group">
 					<input type="text" name="search" placeholder="Recherche" class="form-control search-input">
@@ -73,42 +73,33 @@
 
 		{% if app.user %}
 			{% if app.user.roles[0] == 'ROLE_ADMIN' %}
-				<div class="admin">
-					<a href="{{path('admin_main')}}">
-						<button class="btn btn-dark">Admin</button>
-					</a>
-				</div>
+				<a href="{{path('admin_main')}}" class="btn btn-dark admin">
+					Administration
+				</a>
 			{% endif %}
-			<div class="compte">
-				<a href="{{path('update_user')}}">
-					<button class="btn btn-outline-primary">Mon compte</button>
-				</a>
-			</div>
-			<div class="login">
-				<a href="{{path('app_logout')}}">
-					<button class="btn btn-outline-primary">Logout</button>
-				</a>
-			</div>
+			<a href="{{path('update_user')}}" class="btn btn-outline-primary compte">
+				Mon compte
+			</a>
+			<a href="{{path('app_logout')}}" class="btn btn-outline-primary log">
+				Logout
+			</a>
 		{% else %}
-			<div class="sign-up">
-				<a href="{{path('app_register')}}">
-					<button class="btn btn-outline-primary">Sign up</button>
-				</a>
-			</div>
-			<div class="login">
-				<a href="{{path('app_login')}}">
-					<button class="btn btn-outline-primary">Sign in</button>
-				</a>
-			</div>
+			<a href="{{path('app_register')}}" class="btn btn-outline-primary sign-up">
+				Sign up
+			</a>
+			<a href="{{path('app_login')}}" class="btn btn-outline-primary log">
+				Sign in
+			</a>
 		{% endif %}
 
 		{% block body %}{% endblock %}
-		<div class="container border p-2 my-3">
-			<h3>Nos marques</h3>
+		<div class="container border w-25 p-3 my-3">
+			<h3 class="mb-5">Nos marques</h3>
 			{% for brand in gbrands.getAll %}
 				<p>{{ brand.name }}</p>
 			{% endfor %}
 		</div>
+
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script src="{{ asset('/js/like.js') }}"></script>
