--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -8,8 +8,9 @@
 		</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 		<link
-		rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+		rel="stylesheet" href="{{ asset('css/style.css')}}">
 		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
@@ -20,35 +21,6 @@
 		{% endblock %}
 	</head>
 	<body>
-
-		<style>
-			.search {
-				position: fixed;
-				top: 50px;
-				left: 20px;
-			}
-			.log {
-				position: fixed;
-				top: 50px;
-				right: 50px;
-			}
-			.admin {
-				position: fixed;
-				top: 100px;
-				right: 50px;
-				width: 200px;
-			}
-			.sign-up,
-			.compte {
-				position: fixed;
-				top: 50px;
-				right: 130px;
-			}
-			.img {
-				background: #fff
-			}
-		</style>
-
 		<div class="text-center ">
 			<a href="{{path('main')}}">
 				<img src="{{ asset('img/logos.png') }}" alt="" width="150" class="img">
@@ -93,7 +65,7 @@
 		{% endif %}
 
 		{% block body %}{% endblock %}
-		<div class="container border w-25 p-3 my-3">
+		<div class="container border rounded w-25 p-3 my-3">
 			<h3 class="mb-5">Nos marques</h3>
 			{% for brand in gbrands.getAll %}
 				<p>{{ brand.name }}</p>
