--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -30,7 +30,7 @@
 
 		<div class="text-center">
 			<a href="{{path('admin_main')}}">
-				<img src="{{ asset('img/logos.png') }}" alt="" width="150">
+				<img src="{{ asset('img/logo/logo.png') }}" alt="" width="200">
 			</a>
 		</div>
 
