--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -23,7 +23,7 @@
 	<body>
 		<div class="text-center ">
 			<a href="{{path('main')}}">
-				<img src="{{ asset('img/logos.png') }}" alt="" width="150" class="img">
+				<img src="{{ asset('img/logo/logo.png') }}" alt="" width="200" class="img">
 			</a>
 		</div>
 
